Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38947

TextEdit::cursorRectangle does not update

    XMLWordPrintable

Details

    • qtdeclarative#stable: 8f6254a88e4c634203df779aa385d9955e91b56f

    Description

      ...as appropriate when selecting with mouse.

      Start selecting from the first line and drag to the second line. The cursor rect/delegate stays at the first line:

      import QtQuick 2.1
      
      TextEdit {
          text: "Hello\nWorld!"
          font.pointSize: 20
          selectByMouse: true
          cursorDelegate: Rectangle {
              width: 10
              color: "transparent"
              border.color: "red"
          }
      }
      

      Attachments

        For Gerrit Dashboard: QTBUG-38947
        # Subject Branch Project Status CR V

        Activity

          People

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes