tests/auto/quick/qquicktextedit/data/qtbug-38947.qml
@@ -1,0 +1,11 @@
+import QtQuick 2.0
+
+TextEdit {
+    text: "Hello\nWorld!"
+    selectByMouse: true
+    cursorDelegate: Rectangle {
+        width: 10
+        color: "transparent"
+        border.color: "red"
+    }
+}
